feat: Comment 조회 시 CommentLike가 같이 확인되도록 구현 / 주석, 변수명 등 컨벤션 통일화